cf_analysis_results/checkerframework_3.43.0_WPI_results_JDK_11/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8.txt
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZInputStream.java:53: error: (required.method.not.called) $$ 4 $$ method close $$ field iis $$ com.jcraft.jzlib.InflaterInputStream $$  Non-final owning field might be overwritten $$ ( 2069, 2110 ) $$ @MustCall method close may not have been invoked on field iis or any of its aliases.
    iis = new InflaterInputStream(in, nowrap);
        ^
  The type of object is: com.jcraft.jzlib.InflaterInputStream.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZInputStream.java:53: error: (assignment) $$ 2 $$ @PolyMustCall InflaterInputStream $$ @MustCall("close") InflaterInputStream $$ ( 2075, 2110 ) $$ incompatible types in assignment.
    iis = new InflaterInputStream(in, nowrap);
          ^
  found   : @PolyMustCall InflaterInputStream
  required: @MustCall("close") InflaterInputStream
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZInputStream.java:59: error: (assignment) $$ 2 $$ @PolyMustCall InputStream $$ @MustCall("close") InputStream $$ ( 2234, 2236 ) $$ incompatible types in assignment.
    this.in=in;
            ^
  found   : @PolyMustCall InputStream
  required: @MustCall("close") InputStream
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZInputStream.java:122: error: (contracts.postcondition) $$ 3 $$ close $$ no information about this.iis $$ this.iis is @CalledMethods("close") $$ ( 3706, 3804 ) $$ postcondition of close is not satisfied.
  public void close() throws IOException{
              ^
  found   : no information about this.iis
  required: this.iis is @CalledMethods("close")
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/InflaterInputStream.java:163: error: (contracts.postcondition) $$ 3 $$ close $$ no information about this.in $$ this.in is @CalledMethods("close") $$ ( 4850, 5025 ) $$ postcondition of close is not satisfied.
  public void close() throws IOException {
              ^
  found   : no information about this.in
  required: this.in is @CalledMethods("close")
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/DeflaterOutputStream.java:115: error: (contracts.exceptional.postcondition) $$ 3 $$ close $$ no information about this.out $$ this.out is @CalledMethods("close") $$ ( 3778, 3980 ) $$ on exception, postcondition of close is not satisfied.
  public void close() throws IOException {
              ^
  found   : no information about this.out
  required: this.out is @CalledMethods("close")
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/DeflaterOutputStream.java:115: error: (contracts.postcondition) $$ 3 $$ close $$ no information about this.out $$ this.out is @CalledMethods("close") $$ ( 3778, 3980 ) $$ postcondition of close is not satisfied.
  public void close() throws IOException {
              ^
  found   : no information about this.out
  required: this.out is @CalledMethods("close")
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZOutputStream.java:54: error: (required.method.not.called) $$ 4 $$ method close $$ field out $$ java.io.OutputStream $$  Non-final owning field might be overwritten $$ ( 2071, 2083 ) $$ @MustCall method close may not have been invoked on field out or any of its aliases.
    this.out=out;
            ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZOutputStream.java:54: error: (assignment) $$ 2 $$ @PolyMustCall OutputStream $$ @MustCall("close") OutputStream $$ ( 2080, 2083 ) $$ incompatible types in assignment.
    this.out=out;
             ^
  found   : @PolyMustCall OutputStream
  required: @MustCall("close") OutputStream
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZOutputStream.java:66: error: (required.method.not.called) $$ 4 $$ method close $$ field out $$ java.io.OutputStream $$  Non-final owning field might be overwritten $$ ( 2378, 2390 ) $$ @MustCall method close may not have been invoked on field out or any of its aliases.
    this.out=out;
            ^
  The type of object is: java.io.OutputStream.
  Reason for going out of scope:  Non-final owning field might be overwritten
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZOutputStream.java:66: error: (assignment) $$ 2 $$ @PolyMustCall OutputStream $$ @MustCall("close") OutputStream $$ ( 2387, 2390 ) $$ incompatible types in assignment.
    this.out=out;
             ^
  found   : @PolyMustCall OutputStream
  required: @MustCall("close") OutputStream
../dataset/june2020_dataset_copy/urlfeea716362_ymnk_jzlib_tgz-pJ8-test_large_deflate_inflateJ8/src/com/jcraft/jzlib/ZOutputStream.java:68: error: (assignment) $$ 2 $$ @PolyMustCall DeflaterOutputStream $$ @MustCall("close") DeflaterOutputStream $$ ( 2455, 2494 ) $$ incompatible types in assignment.
    dos = new DeflaterOutputStream(out, deflater);
          ^
  found   : @PolyMustCall DeflaterOutputStream
  required: @MustCall("close") DeflaterOutputStream
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
12 errors
